<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="close">Close\n</string>
    <string name="open">Open\n</string>
    <string name="swap_languages">Swap languages</string>
    <string name="enter_text">Enter a text to translate</string>
    <string name="translate">Translate</string>
    <string name="copy">Copy</string>
    <string name="speaker">Speaker</string>
    <string name="translation_copied">Translation copied</string>
    <string name="history">History</string>
    <string name="error_service_unavailable">Oops, service Unavailable. Try again later</string>
    <string name="error_client">Oops, Client Error, reach out service</string>
    <string name="error_server">Oops, server side error. Wait for support</string>
    <string name="error_unknown">Sorry, unknown error</string>
    <string name="record_audio">Record audio</string>
    <string name="error_speech_not_available">Speech recognition not available</string>
    <string name="stop_recording">Stop recording</string>
    <string name="apply">Apply</string>
    <string name="record_again">Record again</string>
    <string name="listening">Listening ...</string>
    <string name="start_talking">Click to start recording</string>
    <string name="unknown_error">Unknown error</string>
</resources>